Add Breakpoints to meet our dogs card-columns

--- a/dogs.html
+++ b/dogs.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous"></script>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?">
+    <link rel="apple-touch-icon" sizes="180x180" href="/homes-for-hounds/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/homes-for-hounds/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/homes-for-hounds/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 </head>
 
@@ -39,10 +39,10 @@
             </div>
         </div>
     </div>
-
-    <div class="card-deck">
+    <br>
+    <div class="card-columns">
         <div class="card">
-            <img class="card-img-top" src="assets/images/hawk.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/hawk.jpg" alt="Greyhound looking up at camera">
             <div class="card-body text-center">
                 <h4 class="card-title">Hawk</h4>
                 <p class="card-text">7 yr old, Female</p>
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="assets/images/mimi.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/mimi.jpg" alt="Greyhound out on a walk">
             <div class="card-body text-center">
                 <h4 class="card-title">Mimi</h4>
                 <p class="card-text">2 yr old, Female</p>
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="assets/images/trevor.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/trevor.jpg" alt="Brindle greyhound on lead">
             <div class="card-body text-center">
                 <h4 class="card-title">Trevor</h4>
                 <p class="card-text">2 yr old, Male</p>
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="assets/images/dotty.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/dotty.jpg" alt="Dog with tongue hanging out">
             <div class="card-body text-center">
                 <h4 class="card-title">Dotty</h4>
                 <p class="card-text">18 month old, Female</p>
@@ -86,16 +86,28 @@
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="assets/images/anton.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/anton.jpg" alt="Greyhound looking off to side">
             <div class="card-body text-center">
                 <h4 class="card-title">Anton</h4>
                 <p class="card-text">3 yr old, Male</p>
                 <p class="card-text"><i class="fas fa-house"></i> Fully house-trained</p>
                 <p class="card-text"><i class="fa-solid fa-dog"></i> Good with other dogs</p>
                 <p class="card-text"><i class="fa-solid fa-cat"></i> Not cat friendly</p>
-                <p class="card-text"><i class="fa-solid fa-child"></i> Not suitable for children under 12</p>
+                <p class="card-text"><i class="fa-solid fa-child"></i> Not suitable for small children</p>
             </div>
         </div>
+        <div class="card">
+            <img class="card-img-top" src="assets/images/glory.jpg" alt="Greyhound lying in bed">
+            <div class="card-body text-center">
+                <h4 class="card-title">Glory</h4>
+                <p class="card-text">4 yr old, Female</p>
+                <p class="card-text"><i class="fas fa-house"></i> Fully house-trained</p>
+                <p class="card-text"><i class="fa-solid fa-dog"></i> Good with other dogs</p>
+                <p class="card-text"><i class="fa-solid fa-cat"></i> Not Cat friendly</p>
+                <p class="card-text"><i class="fa-solid fa-child"></i> Good with children</p>
+            </div>
+        </div>
+    </div>
     </div>
 
     <!--Footer & Social media links-->
