--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous"></script>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?">
+    <link rel="apple-touch-icon" sizes="180x180" href="/homes-for-hounds/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/homes-for-hounds/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/homes-for-hounds/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 </head>
 
@@ -36,7 +36,7 @@
     <!--Hero image-->
 
     <div>
-        <img id="hero-image" src="assets/images/tonia_kraakman1.jpg" alt="Closeup of dogs face">
+        <img id="hero-image" src="assets/images/tonia_kraakman1.jpg" alt="Closeup of greyhounds face in profile">
     </div>
     <br>
 
@@ -58,7 +58,7 @@
                         aria-label="Meet our Dogs">Meet our Dogs.</a> The website is updated regularly so make sure
                     you keep checking back to see our new arrivals!</p>
                 <img id="dogs-running" src="assets/images/dogs_running.jpg" class="img-responsive rounded"
-                    alt="Photo of dogs playing on beach">
+                    alt="Two dogs playing on beach">
             </div>
 
             <div class="col-sm-4 border-right border-dark">
@@ -94,7 +94,7 @@
                     homes in 2023.</p>
                 <p><strong>25/12/22</strong> Merry Christmas. Our hounds are all tucking in to their Christmas dinners -
                     hopefully next Christmas they will all have homes of their own.</p>
-                <p><img src="assets/images/group.jpg" id="blog-image" alt="dogs walking"
+                <p><img src="assets/images/group.jpg" id="blog-image" alt="dogs walking in a group"
                         class="rounded"><strong>24/09/22</strong> There was a fantastic turnout of over 30 sighthounds
                     for the annual <a href="https://www.greatglobalgreyhoundwalk.co.uk" target="_blank">Great Global
                         Greyhound Walk.</a> Thanks to all the volunteers who helped to walk them at Cosmeston Park near
