--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous"></script>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/homes-for-hounds/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/homes-for-hounds/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/homes-for-hounds/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 </head>
 
@@ -90,7 +90,7 @@
         <div class="row">
             <div class="col-sm-8">
                 <img id="dog-lying" class="img-responsive rounded" src="assets/images/annie_spratt.jpg"
-                    alt="Photo of dog lying down">
+                    alt="Photo of dog lying down on sofa">
             </div>
             <div class="col-sm-4">
                 <h2>Facts & Figures</h2>
