--- a/form.html
+++ b/form.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/c454350385.js" crossorigin="anonymous"></script>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?">
+    <link rel="apple-touch-icon" sizes="180x180" href="/homes-for-hounds/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/homes-for-hounds/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/homes-for-hounds/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 </head>
 
@@ -77,6 +77,7 @@
                     </div>
                 </form>
             </div>
+
             <div class="col-sm-6">
                 <h2>How to Find Us</h2>
                 <p>We are conveniently located just minutes from the A48 in Cross Hands, South Wales</p>
@@ -99,6 +100,7 @@
             </div>
         </div>
     </div>
+
     <!--Footer & Social media links-->
 
     <footer>
