Fix Change card column images to be responsive

--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-5">
-                <img id="logo-square" class="img-responsive rounded"
-                    src="assets/images/homes-for-hounds-logo400x300.png" alt="Charities Logo">
+                <img id="logo-square" class="img-responsive rounded" src="assets/images/homes-for-hounds-logo.png"
+                    alt="Charities Logo">
             </div>
             <div class="col-lg-7">
                 <h2>About Us</h2>
