--- a/dogs.html
+++ b/dogs.html
@@ -42,7 +42,7 @@
     <br>
     <div class="card-columns">
         <div class="card">
-            <img class="card-img-top" src="assets/images/hawk.jpg" alt="Greyhound looking up at camera">
+            <img class="card-img-top img-fluid" src="assets/images/hawk.jpg" alt="Greyhound looking up at camera">
             <div class="card-body text-center">
                 <h4 class="card-title">Hawk</h4>
                 <p class="card-text">7 yr old, Female</p>
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="assets/images/mimi.jpg" alt="Greyhound out on a walk">
+            <img class="card-img-top img-fluid" src="assets/images/mimi.jpg" alt="Greyhound out on a walk">
             <div class="card-body text-center">
                 <h4 class="card-title">Mimi</h4>
                 <p class="card-text">2 yr old, Female</p>
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="assets/images/trevor.jpg" alt="Brindle greyhound on lead">
+            <img class="card-img-top img-fluid" src="assets/images/trevor.jpg" alt="Brindle greyhound on lead">
             <div class="card-body text-center">
                 <h4 class="card-title">Trevor</h4>
                 <p class="card-text">2 yr old, Male</p>
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="assets/images/dotty.jpg" alt="Dog with tongue hanging out">
+            <img class="card-img-top img-fluid" src="assets/images/dotty.jpg" alt="Spotty dog lying on carpet">
             <div class="card-body text-center">
                 <h4 class="card-title">Dotty</h4>
                 <p class="card-text">18 month old, Female</p>
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="assets/images/anton.jpg" alt="Greyhound looking off to side">
+            <img class="card-img-top img-fluid" src="assets/images/anton.jpg" alt="Greyhound looking off to side">
             <div class="card-body text-center">
                 <h4 class="card-title">Anton</h4>
                 <p class="card-text">3 yr old, Male</p>
@@ -97,7 +97,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="assets/images/glory.jpg" alt="Greyhound lying in bed">
+            <img class="card-img-top img-fluid" src="assets/images/glory.jpg" alt="Greyhound lying in bed">
             <div class="card-body text-center">
                 <h4 class="card-title">Glory</h4>
                 <p class="card-text">4 yr old, Female</p>
