Add Update wireframe for Home page

--- a/form.html
+++ b/form.html
@@ -62,7 +62,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <form action="https://formdump.codeinstitute.net/" method="POST">
+                <form action="https://formdump.codeinstitute.net/" method="POST" target="_blank">
                     <h2>Get in Touch</h2>
                     <div class="form-group">
                         <label for="name">Name:</label>
