--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 
     <div>
         <h1>Homes for Hounds<img class="logo" src="assets/images/logo3cropresize.png" alt="Homes for Hounds logo"
-                width="280" height="80"></h1>
+                width="280" height="80">
+            <h1>
     </div>
 
     <!--Hero image-->
