--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!--Logo-->
 
     <div>
-        <h1>Homes for Hounds><img class="logo" src="assets/images/logo3cropresize.png" alt="Homes for Hounds logo"
+        <h1>Homes for Hounds<img class="logo" src="assets/images/logo3cropresize.png" alt="Homes for Hounds logo"
                 width="280" height="80">
         </h1>
     </div>
