--- a/dogs.html
+++ b/dogs.html
@@ -94,7 +94,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top img-fluid" src="assets/images/dottyuse.jpg" alt="Spotty dog lying on carpet">
+            <img class="card-img-top img-fluid" src="assets/images/dotty.jpg" alt="Spotty dog lying on carpet">
             <div class="card-body text-center">
                 <h4 class="card-title">Dotty</h4>
                 <p class="card-text">18 mth old, Female</p>
